Fixed project configuration to make tests runnable